k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mindsprint-ingress
  namespace: mindsprint
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /game
            pathType: Prefix
            backend:
              service:
                name: game-api-service
                port:
                  number: 8000
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-api-service
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
